hard-gists/781740/run.log
=== Docker Run Log for 781740 ===
Started at: Mi 29. Okt 17:19:41 CET 2025

[2025-10-29 17:19:41] START: Running container for 781740
[2025-10-29 17:19:42] SUCCESS: Container 9663fc9ac60bb7ba16c10f451dc0ecfa9760cc8f9acb62fabe158b3e35997961 started for 781740
=== Container logs for 781740 ===
  File "/snippet.py", line 23
    print local_maxima(s)
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 781740 ===
[2025-10-29 17:19:44] INFO: Container 9663fc9ac60bb7ba16c10f451dc0ecfa9760cc8f9acb62fabe158b3e35997961 has stopped
